Fix hamburger menu overflow and overscroll (#4013)

--- a/src/robot/htmldata/libdoc/libdoc.css
+++ b/src/robot/htmldata/libdoc/libdoc.css
@@ -404,7 +404,7 @@ input.hamburger-menu:checked ~ span.hamburger-menu-3
         display: block;
         position: fixed;
         height: 100vh;
-        width: 100vw;
+        width: 100%;
     }
 
     .keywords-overview {
@@ -414,6 +414,7 @@ input.hamburger-menu:checked ~ span.hamburger-menu-3
 
     .shortcuts {
         max-width: 100vw;
+        overscroll-behavior: none;
     }
 }
 
